--- a/.github/workflows/audit.yaml
+++ b/.github/workflows/audit.yaml
@@ -2,7 +2,6 @@ name: Audit
 
 on:
   workflow_call:
-    inputs:
     secrets:
       client_id:
         required: true
@@ -51,7 +50,7 @@ jobs:
 
       - name: Run Lighthouse CI
         run: |
-          unlighthouse-ci --site ${{ inputs.website_url }} --build-static
+          unlighthouse-ci --site ${{ secrets.website_url }} --build-static
 
       - name: Commit Changes
         run: |
