--- a/.github/workflows/generate-sitemap.yaml
+++ b/.github/workflows/generate-sitemap.yaml
@@ -1,4 +1,4 @@
-name: Audit
+name: Generate Sitemap
 
 on:
   workflow_call:
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Change Directory to /frontend
-        run: cd frontend
+        run: cd ${{ github.workspace }}/frontend
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
