--- a/.github/workflows/generate-sitemap.yaml
+++ b/.github/workflows/generate-sitemap.yaml
@@ -19,10 +19,11 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          path: frontend
 
-      - name: Change Directory to /frontend and Setup Node.js
-        run: |
-          cd ${{ github.workspace }}/frontend && actions/setup-node@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: "18.x"
 
