--- a/.github/workflows/generate-sitemap.yaml
+++ b/.github/workflows/generate-sitemap.yaml
@@ -20,15 +20,6 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Change working directory to frontend
-        run: cd frontend
-
-      - name: List directory contents
-        run: ls frontend
-
-      - name: List directory contents 2
-        run: ls
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -36,7 +27,10 @@ jobs:
 
       - run: npm install
       - name: Build and Generate Sitemaps
-        run: npm run build
+        run: |
+          cd frontend
+          npm install
+          npm run build
         env:
           NODE_OPTIONS: --max-old-space-size=4096
 
