--- a/.github/workflows/generate-sitemap.yaml
+++ b/.github/workflows/generate-sitemap.yaml
@@ -15,6 +15,9 @@ concurrency:
 jobs:
   sitemap:
     runs-on: ubuntu-latest
+     defaults:
+      run:
+        working-directory: frontend
 
     steps:
       - name: Checkout Repository
@@ -27,10 +30,7 @@ jobs:
 
       - run: npm install
       - name: Build and Generate Sitemaps
-        run: |
-          cd frontend
-          npm install
-          npm run build
+        run: npm run build
         env:
           NODE_OPTIONS: --max-old-space-size=4096
 
