--- a/.github/workflows/generate-sitemap.yaml
+++ b/.github/workflows/generate-sitemap.yaml
@@ -15,6 +15,8 @@ concurrency:
 jobs:
   sitemap:
     runs-on: ubuntu-latest
+    env:
+      NEXT_PUBLIC_API_URL: https://wellington-production.up.railway.app
     defaults:
       run:
         working-directory: frontend
