Trying with passing env

--- a/.github/workflows/generate-sitemap.yaml
+++ b/.github/workflows/generate-sitemap.yaml
@@ -7,6 +7,8 @@ on:
         required: true
       GITHUB_EMAIL:
         required: true
+      NEXT_PUBLIC_API_URL:
+        required: true
 
 concurrency:
   group: ${{ github.ref }}
@@ -16,7 +18,7 @@ jobs:
   sitemap:
     runs-on: ubuntu-latest
     env:
-      NEXT_PUBLIC_API_URL: https://wellington-production.up.railway.app
+      NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
     defaults:
       run:
         working-directory: frontend
